--- a/abnormal_request_detection/src/main/config/command.properties
+++ b/abnormal_request_detection/src/main/config/command.properties
@@ -1,67 +1,124 @@
 #
-# Insights-ETL command properties.
+# ARD command properties.
 #
-# Copyright (C) 2016.  xAd, Inc.  All Rights Reserved.
+# Copyright (C) 2014  xAd, Inc.  All rights reserved.
 #
 
 #---------------------
-# HDFS Commands
+# Individual Commands
 #---------------------
-# Initialization
-cmd.hinit = 101_HDFS_INIT
-cmd.init  = $(cmd.hinit)
+cmd.init  = 101_INIT
 
-#----------------------------
-# Visitation Hourly Summary
-#----------------------------
-cmd.vhs-gen    = 301_VISITATION_HOURLY_SUMMARY_GEN
-cmd.vhs-local  = 302_VISITATION_HOURLY_SUMMARY_COPY_LOCAL
-cmd.vhs-s3put  = 303_VISITATION_HOURLY_SUMMARY_S3_PUT
-cmd.vhs-s3get  = 304_VISITATION_HOURLY_SUMMARY_S3_GET
-cmd.vhs-dwload = 305_VISITATION_HOURLY_SUMMARY_DW_LOAD
-cmd.vhs-clean  = 306_VISITATION_HOURLY_SUMMARY_CLEAN
-cmd.vhs-dwclean= 307_VISITATION_HOURLY_SUMMARY_REDSHIFT_CLEAN
-cmd.vhs-monitor= 308_VISITATION_HOURLY_SUMMARY_MONITOR
-cmd.vhs-s3list = 309_VISITATION_HOURLY_SUMMARY_S3_LIST
+#---------------------
+# ENIGMA (S3)
+#---------------------
+cmd.enigma-daily    = 201_ENIGMA_DAILY_GET
+cmd.enigma-du       = 203_ENIGMA_DU
+cmd.enigma-validate = 204_ENIGMA_VALIDATE
+cmd.enigma-sync-log-status = 207_ENIGMA_SYNC_LOG_STATUS
+cmd.enigma-status-log = 208_ENIGMA_STATUS_LOG
+cmd.enigma-clean    = 220_ENIGMA_CLEAN
+cmd.enigma-clean-nf = 221_ENIGMA_CLEAN_NO_FILL
+cmd.enigma-ls       = 222_ENIGMA_LS
 
-# Aliases
-cmd.vhs-load = $(cmd.vhs-dwload)
-cmd.vhg = $(cmd.vhs-gen)
-cmd.vhp = $(cmd.vhs-s3put)
-cmd.vhl = $(cmd.vhs-dwload)
-cmd.vhc = $(cmd.vhs-clean)
-cmd.vhm = $(cmd.vhs-monitor)
+cmd.ed  = $(cmd.enigma-daily)
+cmd.eh  = $(cmd.enigma-hourly)
+cmd.esl = $(cmd.enigma-status-log)
 
-cmd.gen   = $(cmd.vhs-gen)
-cmd.s3p   = $(cmd.vhs-s3put)
-cmd.s3get = $(cmd.vhs-s3get)
-cmd.s3l   = $(cmd.vhs-s3list)
-cmd.load  = $(cmd.vhs-dwload)
-cmd.clean = $(cmd.vhs-clean)
-cmd.dwclean = $(cmd.vhs-dwclean)
-cmd.mon   = $(cmd.vhs-monitor)
+#------------------------
+# Dimension Tables
+#------------------------
+cmd.rs-dim-get   = 301_REDSHIFT_DIMENSIONS_GET
+cmd.rs-dim-archive = 302_REDSHIFT_DIMENSIONS_ARCHIVE
+cmd.rs-dim-clean = 303_REDSHIFT_DIMENSIONS_CLEAN
+cmd.rsd = $(cmd.rs-dim-get)
+cmd.rsg = $(cmd.rs-dim-get)
+cmd.rsa = $(cmd.rs-dim-archive)
+cmd.rsc = $(cmd.rs-dim-clean)
+
+#-----------------
+# XADCMS (MySQL)
+#-----------------
+cmd.xadcms-get   = 501_XADCMS_GET
+cmd.xadcms-clean = 505_XADCMS_CLEAN
+cmd.xadcms = $(cmd.xadcms-get)
 
 #------------------
-# Location Hourly
+# POI (PostgreSQL)
 #------------------
-cmd.loc-extract = 401_LOCATION_HOURLY_EXTRACT
-cmd.loc-clean = 402_LOCATION_HOURLY_CLEAN
-
-cmd.le = $(cmd.loc-extract)
-cmd.lc = $(cmd.loc-clean)
-
-#--------------------
-# User Frequency 
-#--------------------
-cmd.uf-hourly = 501_USER_FREQUENCY_HOURLY
-cmd.uf-accum = 502_USER_FREQUENCY_ACCUMULATION
-cmd.uf-blank = 501_USER_FREQUENCY_GENERATE_BLANK_TABLE
+cmd.poidb-get   = 511_POIDB_GET
+cmd.poidb-split = 512_POIDB_SPLIT
+cmd.poidb-clean = 513_POIDB_CLEAN
+cmd.poi-get = $(cmd.poidb-get)
+cmd.poi-split = $(cmd.poidb-split)
+cmd.poi-clean = $(cmd.poidb-clean)
 
 
+#-------------------------------
+# call_tracking_log (RedShift)
+#-------------------------------
+cmd.ctl-get-s3     = 601_CALL_TRACKING_LOG_GET_S3
+cmd.ctl-get-hdfs   = 602_CALL_TRACKING_LOG_GET_HDFS
+cmd.ctl-clean-s3   = 603_CALL_TRACKING_LOG_CLEAN_S3
+cmd.ctl-clean-hdfs = 604_CALL_TRACKING_LOG_CLEAN_HDFS
+cmd.ctls = $(cmd.ctl-get-s3)
+cmd.ctlh = $(cmd.ctl-get-hdfs)
+cmd.ctl  = $(cmd.ctl-get-s3) $(cmd.ctl-get-hdfs)
+
+#------------------------------
+# campaign_hourly_summary (S3)
+#------------------------------
+cmd.camp-hourly-summary-get   = 611_CAMPAIGN_HOURLY_SUMMARY_GET
+cmd.camp-hourly-summary-clean = 612_CAMPAIGN_HOURLY_SUMMARY_CLEAN
+cmd.chs = $(cmd.camp-hourly-summary-get)
+cmd.chs-clean = $(cmd.camp-hourly-summary-clean)
+
+#------------------------------
+# rtb_hourly_summary (S3)
+#------------------------------
+cmd.rtb-hourly-summary-get   = 621_RTB_HOURLY_SUMMARY_GET
+cmd.rtb-hourly-summary-clean = 622_RTB_HOURLY_SUMMARY_CLEAN
+cmd.rhs = $(cmd.rtb-hourly-summary-get)
+cmd.rhs-get = $(cmd.rtb-hourly-summary-get)
+cmd.rhs-clean = $(cmd.rtb-hourly-summary-clean)
+
+#-------------------------
+# General Clean Commands
+#-------------------------
+cmd.clean-tmp     = 801_CLEAN_TMP
+cmd.clean-sub-tmp = 802_CLEAN_SUB_TMP
+cmd.clean-user    = 803_CLEAN_USER_TRASH_STAGING
+cmd.clean-logs    = 804_CLEAN_APP_LOGS
+cmd.clean-dir     = 809_CLEAN_USER_SPECIFIED_DIRS
+cmd.clean-stmp = $(cmd.clean-sub-tmp)
+cmd.clean = $(cmd.clean-tmp) $(cmd.clean-sub-tmp) $(cmd.clean-user)
 
 #---------
 # Test
 #---------
-cmd.test  = 911_TEST
+cmd.test-exception = 901_TEST_EXCEPTION
+cmd.test-sleep = 902_TEST_SLEEPING
+cmd.te = $(cmd.test-exception)
+cmd.ts = $(cmd.test-sleep)
+
+#---------------------
+# EXTRACT (S3)
+#---------------------
+cmd.extract-daily    = 1001_EXTRACT_DAILY_GET
+cmd.extract-hourly   = 1002_EXTRACT_HOURLY_GET
+cmd.extract-du       = 1003_EXTRACT_DU
+cmd.extract-validate = 1004_EXTRACT_VALIDATE
+cmd.extract-status-log = 1008_EXTRACT_STATUS_LOG
+cmd.extract-clean    = 1020_EXTRACT_CLEAN
+cmd.extract-clean-nf = 1021_EXTRACT_CLEAN_NO_FILL
+cmd.extract-ls       = 1022_EXTRACT_LS
+
+
+#--------------------------------
+# Science Core Conversion (TEST)
+#--------------------------------
+cmd.scpq-gen  = 1101_SCIENCE_CORE_PARQUET_GEN
+
+
 
 
