--- a/abnormal_request_detection/src/main/config/opt/dev.properties
+++ b/abnormal_request_detection/src/main/config/opt/dev.properties
@@ -1,37 +1,9 @@
 #
-# Dev options.  This file will NOT be installed automatically.
-# Need to manually deploy/link it in the dev box if it is desired.
-#
-# Copyright (C) 2016.  xAd, Inc.  All rights reserved.
+# Dev properties
 #
 
-#----------------------
-# Customization
-#----------------------
-user.home = /home/$(user)
-
-#----------------------
-# Local Project Dirs
-#----------------------
-user.proj.dir = $(user.home)/opt/insights-etl
-#proj.data.dir    = $(user.proj.dir)/data
-proj.lock.dir    = $(user.proj.dir)/lock
-proj.log.dir     = $(user.proj.dir)/log
-proj.log.pig.dir = $(user.proj.dir)/log/pig
-proj.output.dir  = $(user.proj.dir)/output
-proj.tmp.dir     = $(user.proj.dir)/tmp
-proj.var.dir     = $(user.proj.dir)/var
-proj.working.dir = $(user.proj.dir)/working
+alert.email = xiangling.meng@xad.com
 
 
-
-#-----------
-# HDFS
-#-----------
-hdfs.proj.dir   = $(hdfs.root)/user/$(user)/$(proj.name)
-hdfs.proj.dir.orig   = /prod/$(proj.name)
-
-# Preserved xAd Dirs
-hdfs.proj.cache.dir   = $(hdfs.proj.dir.orig)/cache
-
-
+enigma.keep.window = 65
+enigma.keep.window.nofill = 65
