--- a/abnormal_request_detection/src/main/config/opt/local.properties
+++ b/abnormal_request_detection/src/main/config/opt/local.properties
@@ -1,13 +1,9 @@
-# Local properties
+# Local Properties
 
-#-----------
-# Email
-#-----------
 alert.email = xiangling.meng@xad.com
-alert.email.priority = 0
 
-#-------
-# MySQL
-#-------
-status_log.db.conn.mysql.host = etldb-ext.science.xad.com
+# Slave DB
+xadcms.mysql.host = $(xadcms.mysql.master.host.ext)
+status_log.db.conn.mysql.host = $(xadcms.mysql.master.host.ext)
+
 
