Test run_hive_cmd on hive

--- a/abnormal_request_detection/pkg/ard.conf
+++ b/abnormal_request_detection/pkg/ard.conf
@@ -9,7 +9,7 @@ ROOT = ..
 #------------------------
 PKG_NAME = ard
 VERSION = `gawk '/^Release/ {print $2; exit}' ${ROOT}/CHANGELOG.md`
-SHORT_DESC = "xAd distcp tools"
+SHORT_DESC = "Abnormal Request Detection"
 #LONG_DESC = `cat ${ROOT}/README.md`
 #PLATFORM = "x86_64"
 
@@ -37,11 +37,6 @@ OWNER = xad
 # REQUIRED PACKAGES
 #------------------------
 REQUIRE RPM xad-spring-common
-REQUIRE RPM mysql-connector-java
-REQUIRE RPM perl-YAML-Syck
-REQUIRE RPM perl-DBD-mysql
-REQUIRE RPM perl-DBD-Pg
-REQUIRE RPM postgresql
 
 #------------
 # Make Dirs
@@ -63,24 +58,14 @@ FILE ${OWNER} - ${ROOT}/CHANGELOG.* ${PROJ_NAME}/
 #FILE ${OWNER} - ${SRC_LIB_DIR}/parquet-pig-bundle-1.6.0.jar ${PROJ_NAME}/lib/
 #SYMLINK ${OWNER} - parquet-pig-bundle-1.6.0.jar ${PROJ_NAME}/lib/parquet-pig-bundle.jar
 
-FILE ${OWNER} - ${SRC_LIB_DIR}/postgresql-9.0-801.jdbc4.jar ${PROJ_NAME}/lib/
-
-# Perl Modules
-FILE ${OWNER} - ${SRC_SCRIPT_DIR}/xad/copy/*.pm ${SHARE_PERL_DIR}/xad/copy/
-
 # Python Modules
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/*.py ${PROJ_NAME}/python/
-FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/*.py ${PROJ_NAME}/python/xad/
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/ard/*.py ${PROJ_NAME}/python/xad/ard/
 
-# Pig Scripts
-FILE ${OWNER} - ${SRC_PIG_DIR}/*.pig ${PROJ_NAME}/pig/
-
 # Executables
-BIN ${OWNER} - ${SRC_MAIN_DIR}/script/*.pl ${PROJ_NAME}/bin/
 BIN ${OWNER} - ${SRC_MAIN_DIR}/script/ard bin/
-BIN ${OWNER} - ${SRC_MAIN_DIR}/script/ard-* bin/
 
 # Config
-FILE ${OWNER} - ${SRC_MAIN_DIR}/config/*.* ${PROJ_NAME}/config/
+FILE ${OWNER} - ${SRC_MAIN_DIR}/config/*.properties ${PROJ_NAME}/config/
+
 
