--- a/abnormal_request_detection/src/main/config/ard.properties
+++ b/abnormal_request_detection/src/main/config/ard.properties
@@ -30,6 +30,7 @@ proj.config.dir = $(proj.home)/config
 proj.log.dir    = $(proj.home)/log
 proj.status.dir = $(proj.home)/status
 proj.tmp.dir    = $(proj.home)/tmp
+proj.hive.dir   = $(proj.home)/hive
 proj.lock.dir   = $(proj.home)/lock
 proj.pig.dir    = $(proj.home)/pig
 proj.python.dir = $(proj.home)/python
@@ -56,6 +57,11 @@ hdfs.tmp.dir   = /tmp/ard
 
 
 #----------------------------
+# Hive Scripts
+#-----------------------------
+hive.script.ard-gen = $(proj.hive.dir)/ard-gen.hql
+
+#----------------------------
 # Default/Common Properties
 #-----------------------------
 default.countries   = us gb in de ca fr cn it es jp
@@ -63,7 +69,6 @@ default.logtypes    = display exchange euwest1
 default.logtypes.cn = cnnorth1
 default.logtypes.us = display exchange euwest1 search
 default.logtypes.jp = display exchange euwest1 apnortheast1
-
 
 #--------------------
 # Science Core
