--- a/abnormal_request_detection/pkg/ard.conf
+++ b/abnormal_request_detection/pkg/ard.conf
@@ -25,6 +25,7 @@ SRC_MAIN_DIR = ${ROOT}/src/main
 SRC_SCRIPT_DIR = ${SRC_MAIN_DIR}/script
 SRC_PIG_DIR = ${SRC_MAIN_DIR}/pig
 SRC_PYTHON_DIR = ${SRC_MAIN_DIR}/python
+SRC_HIVE_DIR = ${SRC_MAIN_DIR}/hive
 SRC_LIB_DIR = ${ROOT}/build/libs/lib
 
 SHARE_PERL_DIR = share/perl5
@@ -60,7 +61,11 @@ FILE ${OWNER} - ${ROOT}/CHANGELOG.* ${PROJ_NAME}/
 
 # Python Modules
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/*.py ${PROJ_NAME}/python/
+FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/*.py ${PROJ_NAME}/python/xad/
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/ard/*.py ${PROJ_NAME}/python/xad/ard/
+
+# Hive Scripts
+FILE ${OWNER} - ${SRC_HIVE_DIR}/*.py ${PROJ_NAME}/hive/
 
 # Executables
 BIN ${OWNER} - ${SRC_MAIN_DIR}/script/ard bin/
