--- a/abnormal_request_detection/src/main/config/ard.properties
+++ b/abnormal_request_detection/src/main/config/ard.properties
@@ -54,6 +54,7 @@ hdfs.root      = $(hdfs.root.local)
 hdfs.share.dir = $(hdfs.root)/share
 hdfs.data.dir  = $(hdfs.root)/data
 hdfs.tmp.dir   = /tmp/ard
+hdfs.user.dir = $(hdfs.root)/user
 
 
 #----------------------------
@@ -97,30 +98,23 @@ pub.tmp.dir     = ${hdfs.tmp.dir}
 #---------
 python.cmd = /opt/anaconda/bin/python2.7
 pyspark.script.split_poi = $(proj.python.dir)/split_poi.py
+python.script.ard_mapper = $(proj.python.dir)/ard_mapper_orc.py
+python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 
-#--------
-# Spark
-#--------
-spark.driver.memory = 2G
-spark.executor.memory = 4G
-spark.num.executors = 8
+#--------------
+# Hive Server
+#--------------
+hiveserver.uri = jdbc:hive2://ip-172-17-25-136.ec2.internal:2181,ip-172-17-25-137.ec2.internal:2181,ip-172-17-25-135.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
 
-#---------------------
-# Science Core (AVRO)
-#---------------------
-# Data location in HDFS
-extract.data.prefix.hdfs = /data/extract
-# MysQL status prefix for logs in S3
-extract.status_log.prefix = /enigma/extract
-# MysQL status prefix for logs in HDFS
-extract.download.status_log.prefix = sci3:science_core_avro
-extract.dates = L1
-extract.keep.window = 60
-extract.keep.window.nofill = 60
-extract.log.dir = $(proj.log.dir)/extract
-
-# Status Log
 #------------
+# ARD Gen
+#------------
+ard.input.table = science_core_orc
+ard.tmp.table = xianglingmeng.ard_orc
+
+#-------------------
+# Global Status Log
+#-------------------
 # MySQL
 #status_log.db.conn.mysql.user     = $(xadcms.mysql.user)
 #status_log.db.conn.mysql.password = $(xadcms.mysql.passwd)
@@ -130,7 +124,31 @@ extract.log.dir = $(proj.log.dir)/extract
 #status_log.db.type  = mysql
 #status_log.table    = status_log
 
-## Local
+#-------------------
+# Local Status Log
+#-------------------
+status_log_local.table = status_log
+status_log_local.db.type = mysql
+status_log_local.db.conn.mysql.user = etl
+status_log_local.db.conn.mysql.password = etlxaddb
+status_log_local.db.conn.mysql.dbname = xad_etl
+# SCI4
+status_log_local.db.conn.mysql.host = db.ambari.mgmt.xad.com
+status_log_local.db.conn.mysql.port = 3336
+
+# MV1
+#status_log_local.db.conn.mysql.host = nn02.corp.xad.com
+#status_log_local.db.conn.mysql.port = 3306
+
+# Status Log Keys
+# houry key = science_core_x/us/exchange       2017 2 7 15
+# daily key = science_core_x/us/exchange/DAILY 2017 2 7 NULL
+status_log_local.key.science_core_x = science_core_x
+status_log_local.tag.daily = DAILY
+
+##---------------
+## File Status
+##---------------
 proj.status.dir = $(proj.log.dir)/status
 
 #------------
