--- a/abnormal_request_detection/src/main/config/ard.properties
+++ b/abnormal_request_detection/src/main/config/ard.properties
@@ -56,6 +56,12 @@ hdfs.data.dir  = $(hdfs.root)/data
 hdfs.tmp.dir   = /tmp/ard
 hdfs.user.dir = $(hdfs.root)/user
 
+hdfs.model.dir = /user/xianglingmeng/ard/ard_model_files
+hdfs.model.mapper.orc.dir = $(hdfs.model.dir)/ard_mapper_orc.py
+hdfs.model.reducer.orc.dir = $(hdfs.model.dir)/ard_reducer_orc.py
+hdfs.model.mapper.dir = $(hdfs.model.dir)/mapper.py
+hdfs.model.reducer.dir = $(hdfs.model.dir)/reducer.py
+
 
 #----------------------------
 # Hive Scripts
@@ -111,6 +117,11 @@ hiveserver.uri = jdbc:hive2://ip-172-17-25-136.ec2.internal:2181,ip-172-17-25-13
 #------------
 ard.input.table = science_core_orc
 ard.tmp.table = xianglingmeng.ard_orc
+
+
+ard.default.queue = location
+ard.default.tmp.schema = xianglingmeng.tmp
+ard.default.join.schema = xianglingmeng.join
 
 #-------------------
 # Global Status Log
