Add new pipeline built with spark. The folder name is spark_abnormal_request_detection.

--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -75,6 +75,11 @@ hive.script.ard-gen = $(proj.hive.dir)/ard-gen.hql
 #----------------------------
 spark.script.process = $(proj.spark.dir)/ard_process.py
 
+spark.default.driver_memory = 16g
+spark.default.executor_memory = 8g
+spark.default.num_executors = 32
+spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
+
 #----------------------------
 # Default/Common Properties
 #-----------------------------
