US exchange takes 20 min. 68 execturs, 336 cores

--- a/spark_abnormal_request_detection/pkg/ard.conf
+++ b/spark_abnormal_request_detection/pkg/ard.conf
@@ -26,6 +26,7 @@ SRC_SCRIPT_DIR = ${SRC_MAIN_DIR}/script
 SRC_PIG_DIR = ${SRC_MAIN_DIR}/pig
 SRC_PYTHON_DIR = ${SRC_MAIN_DIR}/python
 SRC_SPARK_DIR = ${SRC_MAIN_DIR}/spark
+SRC_HIVE_DIR = ${SRC_MAIN_DIR}/hive
 SRC_LIB_DIR = ${ROOT}/build/libs/lib
 
 SHARE_PERL_DIR = share/perl5
@@ -66,6 +67,9 @@ FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/ard/*.py ${PROJ_NAME}/python/xad/ard/
 
 # Spark Scripts
 FILE ${OWNER} - ${SRC_SPARK_DIR}/*.py ${PROJ_NAME}/spark/
+
+# Hive Scripts
+FILE ${OWNER} - ${SRC_HIVE_DIR}/*.hql ${PROJ_NAME}/hive/
 
 # Executables
 BIN ${OWNER} - ${SRC_MAIN_DIR}/script/ard bin/
