--- a/abnormal_request_detection/src/main/config/ard.properties
+++ b/abnormal_request_detection/src/main/config/ard.properties
@@ -117,7 +117,7 @@ python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 #--------------
 # Hive Server
 #--------------
-hiveserver.uri = jdbc:hive2://ip-172-17-25-136.ec2.internal:2181,ip-172-17-25-137.ec2.internal:2181,ip-172-17-25-135.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
+hiveserver.uri = jdbc:hive2://ec2-54-174-45-181.compute-1.amazonaws.com:10000
 
 hiveserver.uri.embeded = jdbc:hive2://
 #------------
