--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -36,6 +36,7 @@ proj.lock.dir   = $(proj.home)/lock
 proj.pig.dir    = $(proj.home)/pig
 proj.python.dir = $(proj.home)/python
 
+
 # Jars
 share.java.dir  = $(proj.root)/share/java
 jar.avro        = $(share.java.dir)/avro-1.7.6.jar
@@ -68,7 +69,9 @@ hdfs.model.reducer.dir = $(hdfs.model.dir)/reducer.py
 # Hive Scripts
 #-----------------------------
 hive.script.ard-gen = $(proj.hive.dir)/ard-gen.hql
+hive.script.ard-gen-partition =  $(proj.hive.dir)/add-partitions.hql
 
+proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 
 #----------------------------
 # Spark Scripts
@@ -76,8 +79,9 @@ hive.script.ard-gen = $(proj.hive.dir)/ard-gen.hql
 spark.script.process = $(proj.spark.dir)/ard_process.py
 
 spark.default.driver_memory = 16g
-spark.default.executor_memory = 8g
-spark.default.num_executors = 32
+spark.default.executor_memory = 16g
+spark.default.num_executors = 126
+spark.default.executor_cores = 5
 spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 
 #----------------------------
@@ -94,6 +98,9 @@ default.logtypes.jp = display exchange euwest1 apnortheast1
 #--------------------
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
+extract.data.prefix.hdfs = /data/extract
+orc.data.hdfs = /user/xad/tmp/ard/science_core_ex
+
 
 #--------------------
 # Common Properties
@@ -122,7 +129,7 @@ python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 #--------------
 # Hive Server
 #--------------
-hiveserver.uri = jdbc:hive2://ip-172-17-25-136.ec2.internal:2181,ip-172-17-25-137.ec2.internal:2181,ip-172-17-25-135.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
+hiveserver.uri = jdbc:hive2://ec2-52-90-51-92.compute-1.amazonaws.com:10000
 
 hiveserver.uri.embeded = jdbc:hive2://
 #------------
@@ -130,6 +137,7 @@ hiveserver.uri.embeded = jdbc:hive2://
 #------------
 ard.input.table = science_core_hrly
 ard.tmp.table = xianglingmeng.ard_orc
+ard.output.table = xianglingmeng.science_core_ex
 
 
 ard.default.queue = user_freq
