modify tuples to run when fill data missing

--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -79,19 +79,19 @@ proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 spark.script.process = $(proj.spark.dir)/ard_process.py
 
 spark.default.driver_memory = 16g
-spark.default.executor_memory = 16g
-spark.default.num_executors = 126
-spark.default.executor_cores = 5
+spark.default.executor_memory = 12g
+spark.default.num_executors = 32
+spark.default.executor_cores = 2
 spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 
 #----------------------------
 # Default/Common Properties
 #-----------------------------
 default.countries   = us gb in de ca fr cn it es jp
-default.logtypes    = display exchange euwest1
+default.logtypes    = exchange display euwest1
 default.logtypes.cn = cnnorth1
-default.logtypes.us = display exchange euwest1 search
-default.logtypes.jp = display exchange euwest1 apnortheast1
+default.logtypes.us = exchange display euwest1 search
+default.logtypes.jp = exchange display euwest1 apnortheast1
 
 #--------------------
 # Science Core
