--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -77,12 +77,17 @@ proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 # Spark Scripts
 #----------------------------
 spark.script.process = $(proj.spark.dir)/ard_process.py
+spark.script.join = $(proj.spark.dir)/ard_join.py
 
-spark.default.driver_memory = 16g
-spark.default.executor_memory = 12g
-spark.default.num_executors = 32
-spark.default.executor_cores = 2
+spark.default.driver_memory = 4g
+spark.process.executor_memory = 4g
+spark.process.num_executors = 32
+spark.process.executor_cores =1
 spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
+
+spark.join.executor_memory = 4g
+spark.join.num_executors = 32
+spark.join.executor_cores =1
 
 #----------------------------
 # Default/Common Properties
@@ -99,7 +104,8 @@ default.logtypes.jp = exchange display euwest1 apnortheast1
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
 extract.data.prefix.hdfs = /data/extract
-orc.data.hdfs = /user/xad/tmp/ard/science_core_ex
+orc.data.hdfs = /user/xad/tmp/ard/data
+abd.data.hdfs = /user/xad/tmp/ard/abnormal_req
 
 
 #--------------------
