add configuration for other countries

--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -83,11 +83,20 @@ spark.default.driver_memory = 4g
 spark.process.executor_memory = 4g
 spark.process.num_executors = 32
 spark.process.executor_cores =1
-spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
-
 spark.join.executor_memory = 4g
 spark.join.num_executors = 32
 spark.join.executor_cores =1
+spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
+
+spark.process.executor_memory.other = 4g
+spark.process.num_executors.other = 16
+spark.process.executor_cores.other =1
+spark.join.executor_memory.other = 4g
+spark.join.num_executors.other = 16
+spark.join.executor_cores.other =1
+
+
+
 
 #----------------------------
 # Default/Common Properties
