running on crond right now

--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -96,8 +96,6 @@ spark.join.num_executors.other = 16
 spark.join.executor_cores.other =1
 
 
-
-
 #----------------------------
 # Default/Common Properties
 #-----------------------------
@@ -113,8 +111,8 @@ default.logtypes.jp = exchange display euwest1 apnortheast1
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
 extract.data.prefix.hdfs = /data/extract
-orc.data.hdfs = /user/xad/tmp/ard/data
-abd.data.hdfs = /user/xad/tmp/ard/abnormal_req
+orc.data.hdfs = /data/science_core_ex
+abd.data.hdfs = /prod/ard/abnormal_req
 
 
 #--------------------
@@ -152,10 +150,10 @@ hiveserver.uri.embeded = jdbc:hive2://
 #------------
 ard.input.table = science_core_hrly
 ard.tmp.table = xianglingmeng.ard_orc
-ard.output.table = xianglingmeng.science_core_ex
+ard.output.table = science_core_ex
 
 
-ard.default.queue = user_freq
+ard.default.queue = ard
 ard.default.tmp.schema = xianglingmeng.tmp
 ard.default.join.schema = xianglingmeng.join
 
