--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -90,14 +90,14 @@ spark.join.executor_cores =1
 spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 
 spark.process.executor_memory.gb = 4g
-spark.process.num_executors.gb = 24
+spark.process.num_executors.gb = 16
 spark.process.executor_cores.gb =1
 spark.join.executor_memory.gb = 4g
-spark.join.num_executors.gb = 24
+spark.join.num_executors.gb = 16
 spark.join.executor_cores.gb =1
 
 spark.orc.executor_memory.other = 4g
-spark.orc.num_executors.other = 16
+spark.orc.num_executors.other = 8
 spark.orc.executor_cores.other =1
 
 
@@ -108,7 +108,8 @@ default.countries   = us gb in de ca fr cn it es jp
 default.logtypes    = exchange display euwest1
 default.logtypes.cn = cnnorth1
 default.logtypes.jp = exchange display euwest1 apnortheast1
-
+default.logtypes.au = exchange display euwest1 apnortheast1
+default.logtypes.zn = exchange display euwest1 apnortheast1
 
 #--------------------
 # Science Core
