--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -82,22 +82,22 @@ spark.script.orc = $(proj.spark.dir)/ard_orc.py
 
 spark.default.driver_memory = 4g
 spark.process.executor_memory = 4g
-spark.process.num_executors = 32
+spark.process.num_executors = 64
 spark.process.executor_cores =1
 spark.join.executor_memory = 4g
-spark.join.num_executors = 32
+spark.join.num_executors = 64
 spark.join.executor_cores =1
 spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 
 spark.process.executor_memory.gb = 4g
-spark.process.num_executors.gb = 16
+spark.process.num_executors.gb = 32
 spark.process.executor_cores.gb =1
 spark.join.executor_memory.gb = 4g
-spark.join.num_executors.gb = 16
+spark.join.num_executors.gb = 32
 spark.join.executor_cores.gb =1
 
 spark.orc.executor_memory.other = 4g
-spark.orc.num_executors.other = 8
+spark.orc.num_executors.other = 16
 spark.orc.executor_cores.other =1
 
 
@@ -117,8 +117,8 @@ default.logtypes.zn = exchange display euwest1 apnortheast1
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
 extract.data.prefix.hdfs = /data/extract
-orc.data.hdfs = /data/science_core_ex
-abd.data.hdfs = /prod/ard/abnormal_req
+orc.data.hdfs = /data/science_core_ex_new
+abd.data.hdfs = /prod/ard/ab_req
 
 
 #--------------------
@@ -148,7 +148,7 @@ python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 #--------------
 # Hive Server
 #--------------
-hiveserver.uri = jdbc:hive2://ec2-52-90-51-92.compute-1.amazonaws.com:10000
+hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155.ec2.internal:2181,ip-172-17-28-34.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
 
 hiveserver.uri.embeded = jdbc:hive2://
 #------------
@@ -156,7 +156,7 @@ hiveserver.uri.embeded = jdbc:hive2://
 #------------
 ard.input.table = science_core_hrly
 ard.tmp.table = xianglingmeng.ard_orc
-ard.output.table = science_core_ex
+ard.output.table = science_core_orc
 
 
 ard.default.queue = ard
@@ -194,7 +194,7 @@ status_log_local.db.conn.mysql.port = 3336
 # Status Log Keys
 # houry key = science_core_x/us/exchange       2017 2 7 15
 # daily key = science_core_x/us/exchange/DAILY 2017 2 7 NULL
-status_log_local.key.science_core_x = science_core_x
+status_log_local.key.science_core_x = science_core_orc
 status_log_local.tag.daily = DAILY
 
 ##---------------
