--- a/spark_abnormal_request_detection/src/main/config/ard.properties
+++ b/spark_abnormal_request_detection/src/main/config/ard.properties
@@ -82,22 +82,22 @@ spark.script.orc = $(proj.spark.dir)/ard_orc.py
 
 spark.default.driver_memory = 4g
 spark.process.executor_memory = 4g
-spark.process.num_executors = 64
+spark.process.num_executors = 32
 spark.process.executor_cores =1
 spark.join.executor_memory = 4g
-spark.join.num_executors = 64
+spark.join.num_executors = 32
 spark.join.executor_cores =1
 spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 
 spark.process.executor_memory.gb = 4g
-spark.process.num_executors.gb = 32
+spark.process.num_executors.gb = 16
 spark.process.executor_cores.gb =1
 spark.join.executor_memory.gb = 4g
-spark.join.num_executors.gb = 32
+spark.join.num_executors.gb = 16
 spark.join.executor_cores.gb =1
 
 spark.orc.executor_memory.other = 4g
-spark.orc.num_executors.other = 16
+spark.orc.num_executors.other = 12
 spark.orc.executor_cores.other =1
 
 
@@ -117,7 +117,7 @@ default.logtypes.zn = exchange display euwest1 apnortheast1
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
 extract.data.prefix.hdfs = /data/extract
-orc.data.hdfs = /data/science_core_ex_new
+orc.data.hdfs = /data/science_core_ex
 abd.data.hdfs = /prod/ard/ab_req
 
 
@@ -217,4 +217,9 @@ hadoop.s3 = $(hadoop.s3n)
 include = local-share.properties [optional]
 include = local.properties [optional]
 include = dev.properties [optional]
+
+#-----------------
+# Regeneration
+#-----------------
+orc.data.hdfs.re = /data/science_core_ex_new
 
