--- a/spark_abnormal_request_detection/src/main/config/command.properties
+++ b/spark_abnormal_request_detection/src/main/config/command.properties
@@ -16,6 +16,7 @@ cmd.gen  = 201_ABNORMA_REQ_DETECTION_HOURLY_GEN
 cmd.s3p  = 202_ABNORMA_REQ_DETECTION_PUSH_TO_S3
 cmd.clean = 203_ABNORMA_REQ_DETECTION_CLEANING
 cmd.mon  = 204_ABNORMA_REQ_DETECTION_MONITORING
+cmd.regen  = 205_ABNORMA_REQ_DETECTION_HOURLY_REGEN
 
 # Aliases
 cmd.run = $(cmd.gen)
