--- a/abnormal_request_detection/pkg/ard.conf
+++ b/abnormal_request_detection/pkg/ard.conf
@@ -65,7 +65,7 @@ FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/*.py ${PROJ_NAME}/python/xad/
 FILE ${OWNER} - ${SRC_PYTHON_DIR}/xad/ard/*.py ${PROJ_NAME}/python/xad/ard/
 
 # Hive Scripts
-FILE ${OWNER} - ${SRC_HIVE_DIR}/*.hql ${PROJ_NAME}/hive/
+FILE ${OWNER} - ${SRC_HIVE_DIR}/*.py ${PROJ_NAME}/hive/
 
 # Executables
 BIN ${OWNER} - ${SRC_MAIN_DIR}/script/ard bin/
