--- a/abnormal_request_detection/src/main/config/ard.properties
+++ b/abnormal_request_detection/src/main/config/ard.properties
@@ -31,7 +31,6 @@ proj.log.dir    = $(proj.home)/log
 proj.status.dir = $(proj.home)/status
 proj.tmp.dir    = $(proj.home)/tmp
 proj.hive.dir   = $(proj.home)/hive
-proj.spark.dir  = $(proj.home)/spark
 proj.lock.dir   = $(proj.home)/lock
 proj.pig.dir    = $(proj.home)/pig
 proj.python.dir = $(proj.home)/python
@@ -55,25 +54,12 @@ hdfs.root      = $(hdfs.root.local)
 hdfs.share.dir = $(hdfs.root)/share
 hdfs.data.dir  = $(hdfs.root)/data
 hdfs.tmp.dir   = /tmp/ard
-hdfs.user.dir = $(hdfs.root)/user
-
-hdfs.model.dir = /user/xianglingmeng/ard/ard_model_files
-hdfs.model.mapper.orc.dir = $(hdfs.model.dir)/ard_mapper_orc.py
-hdfs.model.reducer.orc.dir = $(hdfs.model.dir)/ard_reducer_orc.py
-hdfs.model.mapper.dir = $(hdfs.model.dir)/mapper.py
-hdfs.model.reducer.dir = $(hdfs.model.dir)/reducer.py
 
 
 #----------------------------
 # Hive Scripts
 #-----------------------------
 hive.script.ard-gen = $(proj.hive.dir)/ard-gen.hql
-
-
-#----------------------------
-# Spark Scripts
-#----------------------------
-spark.script.process = $(proj.spark.dir)/ard_process.py
 
 #----------------------------
 # Default/Common Properties
@@ -111,29 +97,30 @@ pub.tmp.dir     = ${hdfs.tmp.dir}
 #---------
 python.cmd = /opt/anaconda/bin/python2.7
 pyspark.script.split_poi = $(proj.python.dir)/split_poi.py
-python.script.ard_mapper = $(proj.python.dir)/ard_mapper_orc.py
-python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 
-#--------------
-# Hive Server
-#--------------
-hiveserver.uri = jdbc:hive2://ec2-54-174-45-181.compute-1.amazonaws.com:10000
+#--------
+# Spark
+#--------
+spark.driver.memory = 2G
+spark.executor.memory = 4G
+spark.num.executors = 8
 
-hiveserver.uri.embeded = jdbc:hive2://
+#---------------------
+# Science Core (AVRO)
+#---------------------
+# Data location in HDFS
+extract.data.prefix.hdfs = /data/extract
+# MysQL status prefix for logs in S3
+extract.status_log.prefix = /enigma/extract
+# MysQL status prefix for logs in HDFS
+extract.download.status_log.prefix = sci3:science_core_avro
+extract.dates = L1
+extract.keep.window = 60
+extract.keep.window.nofill = 60
+extract.log.dir = $(proj.log.dir)/extract
+
+# Status Log
 #------------
-# ARD Gen
-#------------
-ard.input.table = science_core_hrly
-ard.tmp.table = xianglingmeng.ard_orc
-
-
-ard.default.queue = user_freq
-ard.default.tmp.schema = xianglingmeng.tmp
-ard.default.join.schema = xianglingmeng.join
-
-#-------------------
-# Global Status Log
-#-------------------
 # MySQL
 #status_log.db.conn.mysql.user     = $(xadcms.mysql.user)
 #status_log.db.conn.mysql.password = $(xadcms.mysql.passwd)
@@ -143,31 +130,7 @@ ard.default.join.schema = xianglingmeng.join
 #status_log.db.type  = mysql
 #status_log.table    = status_log
 
-#-------------------
-# Local Status Log
-#-------------------
-status_log_local.table = status_log
-status_log_local.db.type = mysql
-status_log_local.db.conn.mysql.user = etl
-status_log_local.db.conn.mysql.password = etlxaddb
-status_log_local.db.conn.mysql.dbname = xad_etl
-# SCI4
-status_log_local.db.conn.mysql.host = db.ambari.mgmt.xad.com
-status_log_local.db.conn.mysql.port = 3336
-
-# MV1
-#status_log_local.db.conn.mysql.host = nn02.corp.xad.com
-#status_log_local.db.conn.mysql.port = 3306
-
-# Status Log Keys
-# houry key = science_core_x/us/exchange       2017 2 7 15
-# daily key = science_core_x/us/exchange/DAILY 2017 2 7 NULL
-status_log_local.key.science_core_x = science_core_x
-status_log_local.tag.daily = DAILY
-
-##---------------
-## File Status
-##---------------
+## Local
 proj.status.dir = $(proj.log.dir)/status
 
 #------------
