Fixed hdfs move

--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -1,7 +1,7 @@
 #
 # ARD command properties.
 #
-# Copyright (C) 2014  xAd, Inc.  All rights reserved.
+# Copyright (C) 2017  xAd, Inc.  All rights reserved.
 #
 
 #---------------------
@@ -12,11 +12,12 @@ cmd.init  = 101_INIT
 #----------------------------
 # Abnormal Request Detection
 #----------------------------
-cmd.gen  = 201_ABNORMA_REQ_DETECTION_HOURLY_GEN
-cmd.s3p  = 202_ABNORMA_REQ_DETECTION_PUSH_TO_S3
-cmd.clean = 203_ABNORMA_REQ_DETECTION_CLEANING
-cmd.mon  = 204_ABNORMA_REQ_DETECTION_MONITORING
-cmd.regen  = 205_ABNORMA_REQ_DETECTION_HOURLY_REGEN
+cmd.gen   = 201_ABNORMAL_REQ_DETECTION_HOURLY_GEN
+cmd.hive  = 202_ABNORMAL_REQ_DETECTION_HOURLY_GEN
+cmd.s3p   = 203_ABNORMAL_REQ_DETECTION_PUSH_TO_S3
+cmd.clean = 204_ABNORMAL_REQ_DETECTION_CLEANING
+cmd.mon   = 205_ABNORMAL_REQ_DETECTION_MONITORING
+cmd.regen = 206_ABNORMAL_REQ_DETECTION_HOURLY_REGEN
 
 # Aliases
 cmd.run = $(cmd.gen)
