--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -1,7 +1,7 @@
 #
-# ard properties
+# Abnormal Request Location Detection (ARD) properties
 #
-# Copyright (C) 2014,2016 xAd, Inc.
+# Copyright (C) 2016-2017 xAd, Inc.
 #
 
 include = command.properties
@@ -9,11 +9,11 @@ include = command.properties
 #------------------
 # Review/Override
 #------------------
-alert.email = xiangling.meng@xad.com
+alert.email = victor.chu@xad.com
 alert.email.priority = 1
 
-# process window: last two days
-default.dates = L2-1
+# process window
+default.dates = L7
 
 # number of mappers
 distcp.max.maps = 6
@@ -50,19 +50,16 @@ lock.file = $(proj.lock.dir)/lock
 #----------------
 # HDFS
 #----------------
-hdfs.root.local = $(proj.root)/hdfs
-hdfs.root.cluster =
-hdfs.root      = $(hdfs.root.local)
-hdfs.share.dir = $(hdfs.root)/share
-hdfs.data.dir  = $(hdfs.root)/data
+hdfs.data.dir  = /data
+#hdfs.user.dir  = /user
 hdfs.tmp.dir   = /tmp/ard
-hdfs.user.dir = $(hdfs.root)/user
+hdfs.prod.dir  = /prod/ard
 
-hdfs.model.dir = /user/xianglingmeng/ard/ard_model_files
-hdfs.model.mapper.orc.dir = $(hdfs.model.dir)/ard_mapper_orc.py
-hdfs.model.reducer.orc.dir = $(hdfs.model.dir)/ard_reducer_orc.py
-hdfs.model.mapper.dir = $(hdfs.model.dir)/mapper.py
-hdfs.model.reducer.dir = $(hdfs.model.dir)/reducer.py
+#hdfs.model.dir = /user/xianglingmeng/ard/ard_model_files
+#hdfs.model.mapper.orc.dir = $(hdfs.model.dir)/ard_mapper_orc.py
+#hdfs.model.reducer.orc.dir = $(hdfs.model.dir)/ard_reducer_orc.py
+#hdfs.model.mapper.dir = $(hdfs.model.dir)/mapper.py
+#hdfs.model.reducer.dir = $(hdfs.model.dir)/reducer.py
 
 
 #----------------------------
@@ -117,8 +114,8 @@ default.logtypes.zn = exchange display euwest1 apnortheast1
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
 extract.data.prefix.hdfs = /data/extract
-orc.data.hdfs = /data/science_core_ex
-abd.data.hdfs = /prod/ard/ab_req
+hdfs.data.orc = /data/science_core_ex
+hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
 
 
 #--------------------
@@ -150,30 +147,17 @@ python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 #--------------
 hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155.ec2.internal:2181,ip-172-17-28-34.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
 
-hiveserver.uri.embeded = jdbc:hive2://
 #------------
 # ARD Gen
 #------------
 ard.input.table = science_core_hrly
-ard.tmp.table = xianglingmeng.ard_orc
+#ard.tmp.table = xianglingmeng.ard_orc
 ard.output.table = science_core_orc
 
 
 ard.default.queue = ard
-ard.default.tmp.schema = xianglingmeng.tmp
-ard.default.join.schema = xianglingmeng.join
-
-#-------------------
-# Global Status Log
-#-------------------
-# MySQL
-#status_log.db.conn.mysql.user     = $(xadcms.mysql.user)
-#status_log.db.conn.mysql.password = $(xadcms.mysql.passwd)
-#status_log.db.conn.mysql.host     = $(xadcms.mysql.master.host)
-#status_log.db.conn.mysql.port     = $(xadcms.mysql.master.port)
-#status_log.db.conn.mysql.dbname   = enigma_etl_hd2
-#status_log.db.type  = mysql
-#status_log.table    = status_log
+#ard.default.tmp.schema = xianglingmeng.tmp
+#ard.default.join.schema = xianglingmeng.join
 
 #-------------------
 # Local Status Log
