task for fixing partition locations

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -101,12 +101,12 @@ spark.orc.executor_cores.other =1
 #----------------------------
 # Default/Common Properties
 #-----------------------------
-default.countries   = us gb in de ca fr cn it es jp
+default.countries   = us gb in de ca fr cn it es jp au se no nl lu fi dk ch at be nz
 default.logtypes    = exchange display euwest1
 default.logtypes.cn = cnnorth1
 default.logtypes.jp = exchange display euwest1 apnortheast1
 default.logtypes.au = exchange display euwest1 apnortheast1
-default.logtypes.zn = exchange display euwest1 apnortheast1
+default.logtypes.nz = exchange display euwest1 apnortheast1
 
 #--------------------
 # Science Core
@@ -116,7 +116,7 @@ science_core.sl.folders = tll pos rest
 extract.data.prefix.hdfs = /data/extract
 hdfs.data.orc = /data/science_core_ex
 hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
-
+orc.data.hdfs = /data/science_core_ex
 
 #--------------------
 # Common Properties
@@ -179,6 +179,7 @@ status_log_local.db.conn.mysql.port = 3336
 # houry key = science_core_x/us/exchange       2017 2 7 15
 # daily key = science_core_x/us/exchange/DAILY 2017 2 7 NULL
 status_log_local.key.science_core_x = science_core_orc
+status_log_local.key.add_partition = add_partition
 status_log_local.tag.daily = DAILY
 
 ##---------------
