--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -18,7 +18,7 @@ cmd.s3p   = 203_ABNORMAL_REQ_DETECTION_PUSH_TO_S3
 cmd.clean = 204_ABNORMAL_REQ_DETECTION_CLEANING
 cmd.mon   = 205_ABNORMAL_REQ_DETECTION_MONITORING
 cmd.regen = 206_ABNORMAL_REQ_DETECTION_HOURLY_REGEN
-
+cmd.addpar = 209_ABNORMAL_REQ_DETECTION_HOURLY_ADDPARTITION
 # Aliases
 cmd.run = $(cmd.gen)
 
