--- a/ard_spark/pkg/ard.conf
+++ b/ard_spark/pkg/ard.conf
@@ -75,6 +75,6 @@ FILE ${OWNER} - ${SRC_HIVE_DIR}/*.hql ${PROJ_NAME}/hive/
 BIN ${OWNER} - ${SRC_MAIN_DIR}/script/ard bin/
 
 # Config
-FILE ${OWNER} - ${SRC_MAIN_DIR}/config/*.properties ${PROJ_NAME}/config/
+FILE ${OWNER} - ${SRC_MAIN_DIR}/config/*.* ${PROJ_NAME}/config/
 
 
