--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -9,7 +9,7 @@ include = command.properties
 #------------------
 # Review/Override
 #------------------
-alert.email = victor.chu@xad.com
+alert.email = science-ops@xad.com
 alert.email.priority = 1
 
 # process window
