--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -50,17 +50,21 @@ lock.file = $(proj.lock.dir)/lock
 #----------------
 # HDFS
 #----------------
+# Main Dirs
 hdfs.data.dir  = /data
-#hdfs.user.dir  = /user
 hdfs.tmp.dir   = /tmp/ard
 hdfs.prod.dir  = /prod/ard
 
-#hdfs.model.dir = /user/xianglingmeng/ard/ard_model_files
-#hdfs.model.mapper.orc.dir = $(hdfs.model.dir)/ard_mapper_orc.py
-#hdfs.model.reducer.orc.dir = $(hdfs.model.dir)/ard_reducer_orc.py
-#hdfs.model.mapper.dir = $(hdfs.model.dir)/mapper.py
-#hdfs.model.reducer.dir = $(hdfs.model.dir)/reducer.py
+# Data
+hdfs.data.extract = $(hdfs.data.dir)/extract
+hdfs.data.orc = $(hdfs.data.dir)/science_core_ex
 
+# ABD Folders
+hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
+# FIXME: need to be able to generate from code.
+hdfs.prod.empty = $(hdfs.prod.dir)/empty
+hdfs.prod.empty.folder = $(hdfs.prod.empty)/folder
+hdfs.prod.empty.hour = $(hdfs.prod.empty)/hour
 
 #----------------------------
 # Hive Scripts
@@ -77,25 +81,32 @@ spark.script.process = $(proj.spark.dir)/ard_process.py
 spark.script.join = $(proj.spark.dir)/ard_join.py
 spark.script.orc = $(proj.spark.dir)/ard_orc.py
 
+spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 spark.default.driver_memory = 4g
+
+# Process Memory
 spark.process.executor_memory = 4g
 spark.process.num_executors = 32
 spark.process.executor_cores =1
-spark.join.executor_memory = 4g
-spark.join.num_executors = 32
-spark.join.executor_cores =1
-spark.default.databricks = com.databricks:spark-avro_2.11:3.2.0
 
 spark.process.executor_memory.gb = 4g
 spark.process.num_executors.gb = 16
 spark.process.executor_cores.gb =1
+
+# Join Memory
+spark.join.executor_memory = 4g
+spark.join.num_executors = 32
+spark.join.executor_cores =1
+
+
 spark.join.executor_memory.gb = 4g
 spark.join.num_executors.gb = 16
 spark.join.executor_cores.gb =1
 
-spark.orc.executor_memory.other = 4g
-spark.orc.num_executors.other = 12
-spark.orc.executor_cores.other =1
+# ORC Memory
+spark.orc.executor_memory = 4g
+spark.orc.num_executors = 12
+spark.orc.executor_cores = 1
 
 
 #----------------------------
@@ -113,16 +124,13 @@ default.logtypes.nz = exchange display euwest1 apnortheast1
 #--------------------
 science_core.fill.folders = fill nf
 science_core.sl.folders = tll pos rest
-extract.data.prefix.hdfs = /data/extract
-hdfs.data.orc = /data/science_core_ex
-hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
-orc.data.hdfs = /data/science_core_ex
 
 #--------------------
 # Common Properties
 #--------------------
 ard.file.success = _SUCCESS
 ard.process.window = L7
+ard.model.countries = us gb
 
 #--------------------------
 # Publisher ETL Properties
@@ -146,6 +154,7 @@ python.script.ard_reducer = $(proj.python.dir)/ard_reducer_orc.py
 # Hive Server
 #--------------
 hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155.ec2.internal:2181,ip-172-17-28-34.ec2.internal:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
+hive.command = HADOOP_CLIENT_OPTS="-Djline.terminal=jline.UnsupportedTerminal" beeline
 
 #------------
 # ARD Gen
@@ -153,7 +162,6 @@ hiveserver.uri = jdbc:hive2://ip-172-17-31-58.ec2.internal:2181,ip-172-17-30-155
 ard.input.table = science_core_hrly
 #ard.tmp.table = xianglingmeng.ard_orc
 ard.output.table = science_core_orc
-
 
 ard.default.queue = ard
 #ard.default.tmp.schema = xianglingmeng.tmp
