--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -12,13 +12,18 @@ cmd.init  = 101_INIT
 #----------------------------
 # Abnormal Request Detection
 #----------------------------
-cmd.gen   = 201_ABNORMAL_REQ_DETECTION_HOURLY_GEN
-cmd.hive  = 202_ABNORMAL_REQ_DETECTION_HOURLY_GEN
-cmd.s3p   = 203_ABNORMAL_REQ_DETECTION_PUSH_TO_S3
-cmd.clean = 204_ABNORMAL_REQ_DETECTION_CLEANING
-cmd.mon   = 205_ABNORMAL_REQ_DETECTION_MONITORING
-cmd.regen = 206_ABNORMAL_REQ_DETECTION_HOURLY_REGEN
-cmd.addpar = 209_ABNORMAL_REQ_DETECTION_HOURLY_ADDPARTITION
+cmd.gen    = 201_ABNORMAL_REQ_DETECTION_HOURLY_GEN
+cmd.regen  = 206_ABNORMAL_REQ_DETECTION_HOURLY_REGEN
+# Fix Hive partitions
+cmd.addpar = 208_ARD_ADD_PARTITIONS
+# Fix missing sub-hour partitions
+cmd.fixpar = 209_ARD_FIX_MISSING_PARTITIONS
+
+# TBD
+cmd.s3p    = 203_ABNORMAL_REQ_DETECTION_PUSH_TO_S3
+cmd.clean  = 204_ABNORMAL_REQ_DETECTION_CLEANING
+cmd.mon    = 205_ABNORMAL_REQ_DETECTION_MONITORING
+
 # Aliases
 cmd.run = $(cmd.gen)
 
