--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -86,27 +86,28 @@ spark.default.driver_memory = 4g
 
 # Process Memory
 spark.process.executor_memory = 4g
-spark.process.num_executors = 32
-spark.process.executor_cores =1
+spark.process.num_executors = 12
+spark.process.executor_cores = 1
 
-spark.process.executor_memory.gb = 4g
-spark.process.num_executors.gb = 16
-spark.process.executor_cores.gb =1
+spark.process.num_executors.us = 24
+spark.process.num_executors.gb = 12
 
 # Join Memory
 spark.join.executor_memory = 4g
-spark.join.num_executors = 32
-spark.join.executor_cores =1
+spark.join.num_executors = 16
+spark.join.executor_cores = 1
 
-
-spark.join.executor_memory.gb = 4g
+spark.join.num_executors.us = 32
 spark.join.num_executors.gb = 16
-spark.join.executor_cores.gb =1
+
 
 # ORC Memory
 spark.orc.executor_memory = 4g
-spark.orc.num_executors = 12
+spark.orc.num_executors = 8
 spark.orc.executor_cores = 1
+
+spark.orc.num_executors.us = 16
+spark.orc.num_executors.gb = 12
 
 
 #----------------------------
@@ -123,6 +124,7 @@ default.logtypes.nz = exchange display euwest1 apnortheast1
 # Science Core
 #--------------------
 science_core.fill.folders = fill nf
+science_core.nf.folders = nf
 science_core.sl.folders = tll pos rest
 
 #--------------------
