--- a/ard_spark/pkg/ard-cron.conf
+++ b/ard_spark/pkg/ard-cron.conf
@@ -12,7 +12,7 @@ VERSION = `gawk '/^Release/ {print $2; exit}' ${ROOT}/CHANGELOG.md`
 SHORT_DESC = "Cron jobs for xAd copy tools"
 
 #PRE_SCRIPT = pre.sh
-#POST_SCRIPT = post.sh
+POST_SCRIPT = post-cron.sh
 
 #------------------------
 # Local Parameters
