Fixed schema issue

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -103,7 +103,7 @@ spark.join.num_executors.gb = 16
 
 # ORC Memory
 spark.orc.executor_memory = 4g
-spark.orc.num_executors = 8
+spark.orc.num_executors = 10
 spark.orc.executor_cores = 1
 
 spark.orc.num_executors.us = 16
@@ -169,6 +169,12 @@ ard.default.queue = ard
 #ard.default.tmp.schema = xianglingmeng.tmp
 #ard.default.join.schema = xianglingmeng.join
 
+#--------------------------
+# SmartLocation Centroids
+#--------------------------
+# FIXME
+sl_centroid.dir = /prod/ard/sl_centroid
+
 #-------------------
 # Local Status Log
 #-------------------
@@ -190,6 +196,7 @@ status_log_local.db.conn.mysql.port = 3336
 # daily key = science_core_x/us/exchange/DAILY 2017 2 7 NULL
 status_log_local.key.science_core_x = science_core_orc
 status_log_local.key.add_partition = add_partition
+status_log_local.key.sl_centroid = sl_centroid
 status_log_local.tag.daily = DAILY
 
 ##---------------
