--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -14,10 +14,15 @@ cmd.init  = 101_INIT
 #----------------------------
 cmd.gen    = 201_ABNORMAL_REQ_DETECTION_HOURLY_GEN
 cmd.regen  = 206_ABNORMAL_REQ_DETECTION_HOURLY_REGEN
+
 # Fix Hive partitions
 cmd.addpar = 208_ARD_ADD_PARTITIONS
+
 # Fix missing sub-hour partitions
 cmd.fixpar = 209_ARD_FIX_MISSING_PARTITIONS
+
+# Fix status log
+cmd.fixstatus = 210_ARD_FIX_STATUS_LOG
 
 # TBD
 cmd.s3p    = 203_ABNORMAL_REQ_DETECTION_PUSH_TO_S3
