--- a/ard_spark/src/main/config/opt/local.properties
+++ b/ard_spark/src/main/config/opt/local.properties
@@ -1,9 +1,11 @@
 # Local Properties
 
-alert.email = xiangling.meng@xad.com
+alert.email = victor.chu@xad.com
 
-# Slave DB
-xadcms.mysql.host = $(xadcms.mysql.master.host.ext)
-status_log.db.conn.mysql.host = $(xadcms.mysql.master.host.ext)
+# Status Log
+status_log_local.db.conn.mysql.host = nn02.corp.xad.com
+status_log_local.db.conn.mysql.port = 3306
 
+# Hive
+hiveserver.uri = jdbc:hive2://nn01.corp.xad.com:2181,nn02.corp.xad.com:2181,nn03.corp.xad.com:2181/;serviceDiscoveryMode=zooKeeper;zooKeeperNamespace=hiveserver2
 
