refactoring and centroid filtering

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -77,7 +77,7 @@ proj.hive.tmp.dir    = $(proj.hive.dir)/tmp
 #----------------------------
 # Spark Scripts
 #----------------------------
-spark.script.process = $(proj.spark.dir)/ard_process.py
+spark.script.model = $(proj.spark.dir)/ard_model.py
 spark.script.join = $(proj.spark.dir)/ard_join.py
 spark.script.orc = $(proj.spark.dir)/ard_orc.py
 
@@ -173,7 +173,17 @@ ard.default.queue = ard
 # SmartLocation Centroids
 #--------------------------
 # FIXME
-sl_centroid.dir = /prod/ard/sl_centroid
+#sl.proj.root = /user/xad
+sl.proj.root = /prod/ard
+sl.output.dir = $(sl.proj.root)/smartlocation/output
+sl.hourly.folder = update_hrly
+sl.hourly.ll.folder = $(sl.hourly.folder)/raw_hrly_ll_centroids
+sl.hourly.ip.folder = $(sl.hourly.folder)/raw_hrly_94_caches
+
+# Control the number delays
+sl.hourly.delay.min = 6
+sl.hourly.delay.max = 24
+
 
 #-------------------
 # Local Status Log
@@ -191,13 +201,16 @@ status_log_local.db.conn.mysql.port = 3336
 #status_log_local.db.conn.mysql.host = nn02.corp.xad.com
 #status_log_local.db.conn.mysql.port = 3306
 
-# Status Log Keys
-# houry key = science_core_x/us/exchange       2017 2 7 15
-# daily key = science_core_x/us/exchange/DAILY 2017 2 7 NULL
+# Keys
 status_log_local.key.science_core_x = science_core_orc
 status_log_local.key.add_partition = add_partition
-status_log_local.key.sl_centroid = sl_centroid
 status_log_local.tag.daily = DAILY
+
+# SL
+status_log_local.key.sl.centroid = sl_centroid
+status_log_local.tag.sl.hourly = hourly
+status_log_local.tag.sl.daily  = DAILY
+
 
 ##---------------
 ## File Status
