--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -58,6 +58,7 @@ hdfs.prod.dir  = /prod/ard
 # Data
 hdfs.data.extract = $(hdfs.data.dir)/extract
 hdfs.data.orc = $(hdfs.data.dir)/science_core_ex
+s3.data.science_core_ex = $(hadoop.s3)://xad-science/dw/science_core_ex
 
 # ABD Folders
 hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
@@ -202,9 +203,11 @@ status_log_local.db.conn.mysql.port = 3336
 #status_log_local.db.conn.mysql.port = 3306
 
 # Keys
-status_log_local.key.science_core_x = science_core_orc
+status_log_local.key.science_core_orc = science_core_orc
 status_log_local.key.add_partition = add_partition
+status_log_local.tag.s3put = s3put
 status_log_local.tag.daily = DAILY
+status_log_local.tag.daily_s3put = DAILY_S3PUT
 
 # SL
 status_log_local.key.sl.centroid = sl_centroid
@@ -224,7 +227,8 @@ s3.access_key = AKIAJQ5GHKKUOYMQLZSQ
 s3.secret_key = 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
 hadoop.s3n = s3n
 hadoop.s3a = s3a
-hadoop.s3 = $(hadoop.s3n)
+hadoop.s3 = $(hadoop.s3a)
+
 
 #-----------------
 # Local Override
