--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -12,22 +12,24 @@ cmd.init  = 101_INIT
 #----------------------------
 # Abnormal Request Detection
 #----------------------------
-cmd.gen    = 201_ABNORMAL_REQ_DETECTION_HOURLY_GEN
-cmd.regen  = 206_ABNORMAL_REQ_DETECTION_HOURLY_REGEN
+cmd.gen    = 201_ARD_HOURLY_GEN
+cmd.regen  = 202_ARD_HOURLY_REGEN
 
-# Fix Hive partitions
-cmd.addpar = 208_ARD_ADD_PARTITIONS
+# Backup
+cmd.s3pd   = 211_ARD_S3_PUSH_DAILY
+cmd.s3ph   = 212_ARD_S3_PUSH_HOURLY
+cmd.s3p    = $(cmd.s3ph)
 
-# Fix missing sub-hour partitions
-cmd.fixpar = 209_ARD_FIX_MISSING_PARTITIONS
+# Cleaning (TBD)
+cmd.clean  = 214_ARD_CLEANING
 
-# Fix status log
-cmd.fixstatus = 210_ARD_FIX_STATUS_LOG
+# Monitoring (TBD)
+cmd.mon    = 215_ARD_MONITORING
 
-# TBD
-cmd.s3p    = 203_ABNORMAL_REQ_DETECTION_PUSH_TO_S3
-cmd.clean  = 204_ABNORMAL_REQ_DETECTION_CLEANING
-cmd.mon    = 205_ABNORMAL_REQ_DETECTION_MONITORING
+# Fixes
+cmd.addpar    = 221_ARD_FIX_PARTITIONS
+cmd.fixpar    = 222_ARD_FIX_MISSING_PARTITIONS
+cmd.fixstatus = 223_ARD_FIX_STATUS_LOG
 
 # Aliases
 cmd.run = $(cmd.gen)
