s3hive and fixrep

--- a/ard_spark/src/main/config/ard.properties
+++ b/ard_spark/src/main/config/ard.properties
@@ -59,6 +59,7 @@ hdfs.prod.dir  = /prod/ard
 hdfs.data.extract = $(hdfs.data.dir)/extract
 hdfs.data.orc = $(hdfs.data.dir)/science_core_ex
 s3.data.science_core_ex = $(hadoop.s3)://xad-science/dw/science_core_ex
+s3n.data.science_core_ex = $(hadoop.s3n)://xad-science/dw/science_core_ex
 
 # ABD Folders
 hdfs.prod.abd = $(hdfs.prod.dir)/ab_req
@@ -187,8 +188,9 @@ sl.hourly.delay.max = 24
 
 
 #-------------------
-# Local Status Log
+# Status Log
 #-------------------
+# Common
 status_log_local.table = status_log
 status_log_local.db.type = mysql
 status_log_local.db.conn.mysql.user = etl
@@ -197,19 +199,29 @@ status_log_local.db.conn.mysql.dbname = xad_etl
 # SCI4
 status_log_local.db.conn.mysql.host = db.ambari.mgmt.xad.com
 status_log_local.db.conn.mysql.port = 3336
-
 # MV1
 #status_log_local.db.conn.mysql.host = nn02.corp.xad.com
 #status_log_local.db.conn.mysql.port = 3306
 
+#-------
 # Keys
+#-------
+# - orc
 status_log_local.key.science_core_orc = science_core_orc
 status_log_local.key.add_partition = add_partition
-status_log_local.tag.s3put = s3put
 status_log_local.tag.daily = DAILY
-status_log_local.tag.daily_s3put = DAILY_S3PUT
+# - s3put 
+status_log_local.key.science_core_s3put = science_core_s3put
+status_log_local.tag.s3put = 
+status_log_local.tag.s3put.daily = DAILY
+# - s3hive 
+status_log_local.key.science_core_s3hive = science_core_s3hive
+status_log_local.tag.s3hive =
+status_log_local.tag.s3hive.daily = DAILY
+# - fixrep (fix repeated loc_score folders)
+status_log_local.key.fixrep = science_core_fixrep
 
-# SL
+# - Smart Location (foreign)
 status_log_local.key.sl.centroid = sl_centroid
 status_log_local.tag.sl.hourly = hourly
 status_log_local.tag.sl.daily  = DAILY
