--- a/ard_spark/src/main/config/command.properties
+++ b/ard_spark/src/main/config/command.properties
@@ -15,21 +15,27 @@ cmd.init  = 101_INIT
 cmd.gen    = 201_ARD_HOURLY_GEN
 cmd.regen  = 202_ARD_HOURLY_REGEN
 
-# Backup
+# S3 Backup
 cmd.s3pd   = 211_ARD_S3_PUSH_DAILY
 cmd.s3ph   = 212_ARD_S3_PUSH_HOURLY
 cmd.s3p    = $(cmd.s3ph)
 
+# S3 as Hive partition
+cmd.s3hive = 220_ARD_S3_AS_HIVE_PARTITION
+cmd.s3h    = $(cmd.s3hive)
+
 # Cleaning (TBD)
-cmd.clean  = 214_ARD_CLEANING
+cmd.clean-hdfs  = 230_ARD_CLEAN_HDFS
+cmd.clean  = $(cmd.clean-hdfs)
 
 # Monitoring (TBD)
-cmd.mon    = 215_ARD_MONITORING
+cmd.mon    = 240_ARD_MONITORING
 
 # Fixes
-cmd.addpar    = 221_ARD_FIX_PARTITIONS
-cmd.fixpar    = 222_ARD_FIX_MISSING_PARTITIONS
-cmd.fixstatus = 223_ARD_FIX_STATUS_LOG
+cmd.addpar    = 291_ARD_FIX_PARTITIONS
+cmd.fixpar    = 292_ARD_FIX_MISSING_PARTITIONS
+cmd.fixstatus = 293_ARD_FIX_STATUS_LOG
+cmd.fixrep    = 294_ARD_FIX_REPEATED_AND_NESTED_FOLDERS
 
 # Aliases
 cmd.run = $(cmd.gen)
